# froovie

./: .gitignore  Cargo.toml  README.md  diesel.toml
froovie-db/: .env  Cargo.toml  README.md
froovie-db/froovie-db/src/: schema.rs
froovie-db/migrations/2019-06-06-120238_create_users/: up.sql
froovie-db/migrations/2019-06-10-122741_create_users/: up.sql
froovie-db/migrations/2019-06-10-154542_movie_night/: down.sql  up.sql
froovie-db/src/: lib.rs  models.rs  movies.rs  schema.rs  user_selections.rs  users.rs
migrations/2019-06-10-111140_create_users/: up.sql
src/: dtos.rs  logger.rs  main.rs  mappers.rs  movies.rs  movies_client.rs  router.rs
src/dtos/: mod.rs  movies.rs  user_selections.rs  users.rs
src/services/: mod.rs  tmdb_fetcher.rs
