[package]
name = "froovie"
version = "0.1.0"
authors = ["okno <paul.delafosse@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nickel = "*"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
froovie_db = { path =  "froovie-db" } 
