[package]
name = "froovie"
version = "0.1.0"
authors = ["okno <paul.delafosse@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.3.0"
nickel = "*"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
froovie_db = { path =  "froovie-db" }
tmdb = "2.0.0"
serde = "1.0.92"
serde_json = "1.0.39"
bcrypt = "0.4.0"

[dependencies.log]
version = "0.4"
features = ["max_level_debug", "release_max_level_warn"]
